src/test/deca/context/valid/created/if-then-else.deca
//Description :
// Test d'un if then else
//
// Resultats :
// C'est oui


{
    if (true) {
        print("C'est oui");
    } else {
        print("C'est non");
    }
}
