src/test/deca/context/invalid/created/if-then-else-string-condition.deca
//Description :
// Test d'un if then else avc une condition string
//
// Resultats :
// Erreur

{
    if ("oui") {
        print("Oui");
    } else {
        print("Non");
    }
}
